# ISOmodel

./: Dockerfile  launch_docker.sh
.github/workflows/: build_test.yml  pull_request.yml
IsoModel/src/: CMakeLists.txt  ProjectMacros.cmake  Properties.hpp
IsoModel/src/CSharp/: CMakeLists.txt  test.py
IsoModel/src/Python/: CMakeLists.txt  test.py
